用左连接+union实现外连接模拟来进行谓词下推

--- a/dataSources/relational/src/main/resources/mysql-meta-template.properties
+++ b/dataSources/relational/src/main/resources/mysql-meta-template.properties
@@ -19,6 +19,9 @@ upsert_conflict_statement= %s = VALUES(%s)
 # 获取数据库列表的SQL语句
 database_query_sql=SELECT SCHEMA_NAME AS datname FROM information_schema.schemata;
 
+is_support_full_join=false
+
+
 # 配置MySQL DataTypeTransformer
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
