--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -34,9 +34,10 @@ runs:
           name: Install Docker on MacOS
           shell: bash
           run: |
-            brew install docker colima
-            brew services start colima
-            docker --version
+              brew install docker colima
+              brew services start colima
+              systemctl start docker
+              docker --version
 
         - if: inputs.scope=='all'
           name: Set up Python ${{ inputs.python-version }}
