--- a/.github/workflows/remote-test.yml
+++ b/.github/workflows/remote-test.yml
@@ -61,57 +61,49 @@ jobs:
                   "${GITHUB_WORKSPACE}/.github/scripts/docker/create_network.sh"
 
             - if: runner.os == 'Windows'
-              name: Build IGinX image
+              name: Build IGinX & Client image
               shell: cmd
               run: |
                   cd %GITHUB_WORKSPACE%\docker\onlyIginx && build_iginx_docker.bat
+                  cd %GITHUB_WORKSPACE%\docker\client && build.bat
 
             - if: runner.os != 'Windows'
-              name: Build IGinX image
+              name: Build IGinX & Client image
               shell: bash
               run: |
                   cd ${GITHUB_WORKSPACE}/docker/onlyIginx && \
                   chmod +x "build_iginx_docker.sh" && \
                   "./build_iginx_docker.sh"
+                  cd ${GITHUB_WORKSPACE}/docker/client && \
+                  chmod +x "build.sh" && \
+                  "./build.sh"
 
             - name: Run Metadata
               uses: ./.github/actions/metadataRunner
               with:
-                metadata: ${{ matrix.metadata }}
+                  metadata: ${{ matrix.metadata }}
 
             - name: Run DB
               uses: ./.github/actions/dbRunner
               with:
-                DB-name: ${{ matrix.DB-name }}
+                  DB-name: ${{ matrix.DB-name }}
 
             - if: runner.os == 'Windows'
-              name: Run IGinX container
+              name: Run IGinX & Client container
               shell: cmd
               run: |
-                cd %GITHUB_WORKSPACE%\docker\onlyIginx && run_iginx_docker.bat 172.40.0.2 iginx0 6888
+                  cd %GITHUB_WORKSPACE%\docker\onlyIginx && run_iginx_docker.bat 172.40.0.2 iginx0 6888
+                  cd %GITHUB_WORKSPACE%\docker\client && run_docker.bat
 
             - if: runner.os != 'Windows'
-              name: Run IGinX container
+              name: Run IGinX & Client container
               shell: bash
               run: |
-                cd ${GITHUB_WORKSPACE}/docker/onlyIginx && \
-                chmod +x "run_iginx_docker.sh" && \
-                "./run_iginx_docker.sh" 172.40.0.2 iginx0 6888
-
-            - if: runner.os == 'Windows'
-              name: Build And Run Client container
-              shell: cmd
-              run: |
-                  cd %GITHUB_WORKSPACE%\docker\client && build.bat && run_docker.bat
-
-            - if: runner.os != 'Windows'
-              name: Build And Run Client container
-              shell: bash
-              run: |
+                  cd ${GITHUB_WORKSPACE}/docker/onlyIginx && \
+                  chmod +x "run_iginx_docker.sh" && \
+                  "./run_iginx_docker.sh" 172.40.0.2 iginx0 6888
                   cd ${GITHUB_WORKSPACE}/docker/client && \
-                  chmod +x "build.sh" && \
                   chmod +x "run_docker.sh" && \
-                  "./build.sh" && \
                   "./run_docker.sh"
 
             - name: Register Remote UDFs
