dev parallel without stats

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -53,6 +53,8 @@ queryOptimizer=rbo
 # 优化器规则
 ruleBasedOptimizer=RemoveNotRule=on,FilterFragmentRule=on
 
+# 是否开启并行化算子
+enableParallelOperator=true
 # ParallelFilter触发行数
 parallelFilterThreshold=10000
 # ParallelGroupBy触发行数
@@ -62,8 +64,8 @@ parallelApplyFuncGroupsThreshold=1000
 # ParallelGroupBy线程池大小
 parallelGroupByPoolSize=5
 # ParallelGroupBy线程池数量
-parallelGroupByPoolNum=5
-# ParallelGroupBy线程池数量
+parallelGroupByPoolNum=10
+# 流式ParallelGroupBy线程池数量
 streamParallelGroupByWorkerNum=5
 
 # 约束
@@ -91,8 +93,8 @@ minThriftWorkerThreadNum = 20
 # thrift线程池最大线程数量
 maxThriftWrokerThreadNum = 2147483647
 
-# 当前是否是UT测试环境
-utTestEnv = false
+# 分布式查询的触发分片数
+distributedQueryTriggerThreshold = 3
 
 ####################
 ### Migration 相关配置
@@ -148,10 +150,10 @@ zookeeperConnectionString=127.0.0.1:2181
 #etcdEndpoints=http://localhost:2379
 
 # 是否开启元数据内存管理
-enableMetaCacheControl=false
+enable_meta_cache_control=false
 
 # 分片缓存最大内存限制，单位为 KB，默认 128 MB
-fragmentCacheThreshold=131072
+fragment_cache_threshold=131072
 
 ##########################
 ### 执行层配置
@@ -165,15 +167,15 @@ useStreamExecutor=false
 ### 内存控制
 ##########################
 
-enableMemoryControl=false
+enable_memory_control=false
 
-systemResourceMetrics=default
+system_resource_metrics=default
 
-heapMemoryThreshold=0.9
+heap_memory_threshold=0.9
 
-systemMemoryThreshold=0.9
+system_memory_threshold=0.9
 
-systemCpuThreshold=0.9
+system_cpu_threshold=0.9
 
 ####################
 ### REST 服务配置
@@ -186,7 +188,7 @@ restIp=0.0.0.0
 restPort=6666
 
 # 是否启用 rest 服务
-enableRestService=true
+enableRestService=false
 
 # 乱序数据 margin, 单位是秒
 disorderMargin=10
@@ -218,17 +220,17 @@ transformMaxRetryTimes=3
 ### MQTT 配置
 ####################
 
-enableMqtt=false
+enable_mqtt=false
 
-mqttHost=0.0.0.0
+mqtt_host=0.0.0.0
 
-mqttPort=1883
+mqtt_port=1883
 
-mqttHandlerPoolSize=1
+mqtt_handler_pool_size=1
 
-mqttPayloadFormatter=cn.edu.tsinghua.iginx.mqtt.JsonPayloadFormatter
+mqtt_payload_formatter=cn.edu.tsinghua.iginx.mqtt.JsonPayloadFormatter
 
-mqttMaxMessageSize=1048576
+mqtt_max_message_size=1048576
 
 ##########################
 ### SimplePolicy 策略配置
