--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -35,8 +35,7 @@ runs:
           shell: bash
           run: |
               brew install docker colima
-              brew services start colima
-              systemctl start docker
+              colima start
               docker --version
 
         - if: inputs.scope=='all'
