--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -206,24 +206,30 @@ runs:
           name: write docker donfig file
           shell: bash
           run: |
+              cp -f "${GITHUB_WORKSPACE}/conf/config.properties" "${GITHUB_WORKSPACE}/conf/config_copy.properties"
+              cp -f "${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties" "${GITHUB_WORKSPACE}/conf/config.properties"
               if [ "$RUNNER_OS" == "Linux" ]; then
-                sudo sed -i '/storageEngineList=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties
-                sudo sed -i '/zookeeperConnectionString=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties
-                sudo sed -i '/#filesystem#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties
-                sudo sed -i '/#parquet#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties
+                sudo sed -i '/storageEngineList=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/conf/config.properties
+                sudo sed -i '/zookeeperConnectionString=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/conf/config.properties
+                sudo sed -i '/#filesystem#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/conf/config.properties
+                sudo sed -i '/#parquet#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/conf/config.properties
+                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/db_config_switcher_linux_windows.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/db_config_switcher_linux_windows.sh"
               elif [ "$RUNNER_OS" == "Windows" ]; then
-                sed -i '/storageEngineList=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties
-                sed -i '/zookeeperConnectionString=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties
-                sed -i '/#filesystem#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties
-                sed -i '/#parquet#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties
+                sed -i '/storageEngineList=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/conf/config.properties
+                sed -i '/zookeeperConnectionString=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/conf/config.properties
+                sed -i '/#filesystem#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/conf/config.properties
+                sed -i '/#parquet#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/conf/config.properties
+                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/db_config_switcher_linux_windows.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/db_config_switcher_linux_windows.sh"
               elif [ "$RUNNER_OS" == "macOS" ]; then
-                sudo sed -i '' '/storageEngineList=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties
-                sudo sed -i '' '/zookeeperConnectionString=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties
-                sudo sed -i '' '/#filesystem#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties
-                sudo sed -i '' '/#parquet#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties
+                sudo sed -i '' '/storageEngineList=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/conf/config.properties
+                sudo sed -i '' '/zookeeperConnectionString=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/conf/config.properties
+                sudo sed -i '' '/#filesystem#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/conf/config.properties
+                sudo sed -i '' '/#parquet#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/conf/config.properties
+                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/dataSources/db_config_switcher_macos.sh"
+                "${GITHUB_WORKSPACE}/.github/scripts/dataSources/db_config_switcher_macos.sh"
               else
                 echo "$RUNNER_OS is not supported"
                 exit 1
               fi
-              cp -f "${GITHUB_WORKSPACE}/conf/config.properties" "${GITHUB_WORKSPACE}/conf/config_copy.properties"
-              cp -f "${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties" "${GITHUB_WORKSPACE}/conf/config.properties"
