--- a/.github/actions/zookeeperRunner/action.yml
+++ b/.github/actions/zookeeperRunner/action.yml
@@ -1,56 +1,45 @@
 name: "zookeeper-runner"
 description: "zookeeper runner"
 inputs:
-    os:
-        description: "zookeeper runner environment"
-        required: false
-        default: ubuntu-latest
-    if-stop:
-        description: "to stop the zookeeper"
-        required: false
-        default: "false"
-    if-rerun:
-        description: "to rerun the zookeeper"
-        required: false
-        default: "false"
+  os:
+    description: "zookeeper runner environment"
+    required: false
+    default: ubuntu-latest
+  if-stop:
+    description: "to stop the zookeeper"
+    required: false
+    default: "false"
+  if-rerun:
+    description: "to rerun the zookeeper"
+    required: false
+    default: "false"
 runs:
-    using: "composite" # Mandatory parameter
-    steps:
-        - if: inputs.if-stop=='false' && inputs.if-rerun=='false'
-          name: Run ZooKeeper
-          shell: bash
-          run: |
-              if [ "$RUNNER_OS" == "Linux" ]; then
-                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk.sh"
-              elif [ "$RUNNER_OS" == "macOS" ]; then
-                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk_macos.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk_macos.sh"
-              elif [ "$RUNNER_OS" == "Windows" ]; then
-                chmod +x "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk_windows.sh"
-                "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk_windows.sh"
-              else
-                echo "$RUNNER_OS is not supported"
-                exit 1
-              fi
+  using: "composite" # Mandatory parameter
+  steps:
+    - if: inputs.if-stop=='false' && inputs.if-rerun=='false'
+      name: First Run ZooKeeper | Setup
+      uses: ./.github/actions/setup/zookeeper
 
-        - if: ${{ inputs.if-rerun=='true' && runner.os != 'Windows' }}
-          name: ReRun ZooKeeper
-          shell: bash
-          run: |
-              zookeeper/bin/zkServer.sh start
+    - if: inputs.if-stop=='false' && inputs.if-rerun=='false'
+      name: First Run ZooKeeper
+      uses: ./.github/actions/service/zookeeper
+      with:
+        stop: false
+        clean: false
+        start: true
 
-        - if: ${{ inputs.if-rerun=='true' && runner.os == 'Windows' }}
-          name: ReRun ZooKeeper
-          shell: powershell
-          run: |
-              Start-Process -FilePath 'zookeeper/bin/zkServer.cmd'
-              sleep 3
-              netstat -ano | findstr 2181
+    - if: inputs.if-rerun=='true'
+      name: ReRun ZooKeeper
+      uses: ./.github/actions/service/zookeeper
+      with:
+        stop: false
+        clean: false
+        start: true
 
-        - if: inputs.if-stop=='true'
-          name: Stop ZooKeeper
-          shell: bash
-          run: |
-              chmod +x "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk_clear.sh"
-              "${GITHUB_WORKSPACE}/.github/scripts/metadata/zk_clear.sh"
+    - if: inputs.if-stop=='true'
+      name: Stop ZooKeeper
+      uses: ./.github/actions/service/zookeeper
+      with:
+        stop: true
+        clean: true
+        start: false
