--- a/.github/actions/service/zookeeper/conf/zoo.cfg
+++ b/.github/actions/service/zookeeper/conf/zoo.cfg
@@ -9,8 +9,8 @@ syncLimit=5
 # the directory where the snapshot is stored.
 # do not use /tmp for storage, /tmp here is just
 # example sakes.
-dataDir=D:\\a\\IGinX\\IGinX\\zookeeper\\data
-dataLogDir=D:\\a\\IGinX\\IGinX\\zookeeper\\logs
+dataDir=data
+dataLogDir=logs
 # the port at which the clients will connect
 clientPort=2181
 # the maximum number of client connections.
@@ -34,3 +34,4 @@ clientPort=2181
 #metricsProvider.className=org.apache.zookeeper.metrics.prometheus.PrometheusMetricsProvider
 #metricsProvider.httpPort=7000
 #metricsProvider.exportJvmInfo=true
+
