--- a/assembly/src/assembly/resources/zookeeper/conf/zoo.cfg
+++ b/assembly/src/assembly/resources/zookeeper/conf/zoo.cfg
@@ -10,6 +10,7 @@ syncLimit=5
 # do not use /tmp for storage, /tmp here is just 
 # example sakes.
 dataDir=data
+dataLogDir=logs
 # the port at which the clients will connect
 clientPort=2181
 # the maximum number of client connections.
