--- a/.github/workflows/unit-mds.yml
+++ b/.github/workflows/unit-mds.yml
@@ -48,7 +48,7 @@ jobs:
             max-parallel: 20
             matrix:
                 java: [8]
-                os: [ubuntu-latest, windows-latest, macos-latest]
+                os: [ubuntu-latest, windows-latest, macos-13]
         runs-on: ${{ matrix.os}}
         env:
             STORAGE: etcd
