--- a/dataSources/relational/src/main/resources/mysql-meta-template.properties
+++ b/dataSources/relational/src/main/resources/mysql-meta-template.properties
@@ -18,9 +18,10 @@ upsert_statement= ON DUPLICATE KEY UPDATE
 upsert_conflict_statement= %s = VALUES(%s)
 # 获取数据库列表的SQL语句
 database_query_sql=SELECT SCHEMA_NAME AS datname FROM information_schema.schemata;
-
+# 是否支持full join
 is_support_full_join=false
-
+# filter中正则匹配的符号
+regex_like_symbol=REGEXP
 
 # 配置MySQL DataTypeTransformer
 TINYINT=IGinX-BOOLEAN
