--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -19,7 +19,7 @@ jobs:
                 java: [8]
                 python-version: ["3.9"]
                 os: [ubuntu-latest, macos-latest, windows-latest]
-                DB-name: ["MySQL"]
+                DB-name: ["MySQL", "PostgreSQL"]
                 metadata: [zookeeper]
         runs-on: ${{ matrix.os }}
         steps:
