--- a/.github/workflows/polystore-benchmark-test.yml
+++ b/.github/workflows/polystore-benchmark-test.yml
@@ -89,3 +89,12 @@ jobs:
               shell: bash
               run: |
                   mvn test -q -Dtest=TPCHDataInsertionIT -DfailIfNoTests=false -P-format
+
+            - name: Run session test
+              shell: bash
+              run: |
+                if [ "$RUNNER_OS" = "Windows" ]; then
+                  python "${GITHUB_WORKSPACE}/test/src/test/java/cn/edu/tsinghua/iginx/integration/polybench/TPCHRunner.py"
+                else
+                  python3 "${GITHUB_WORKSPACE}/test/src/test/java/cn/edu/tsinghua/iginx/integration/polybench/TPCHRunner.py"
+                fi
