--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -29,7 +29,7 @@ jobs:
                         "Redis",
                         "MongoDB",
                     ]
-                metadata: [zookeeper]
+                metadata: [zookeeper, etcd]
         runs-on: ${{ matrix.os }}
         steps:
             - uses: actions/checkout@v4
