--- a/.github/actions/confWriter/action.yml
+++ b/.github/actions/confWriter/action.yml
@@ -211,6 +211,7 @@ runs:
               cp -f "${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/conf/config.properties" "${GITHUB_WORKSPACE}/conf/config.properties"
               if [ "$RUNNER_OS" == "Linux" ]; then
                 sudo sed -i '/storageEngineList=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/conf/config.properties
+                sudo sed -i '/storageEngineList=/s/localhost/host.docker.internal/g' ${GITHUB_WORKSPACE}/conf/config.properties
                 sudo sed -i '/zookeeperConnectionString=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/conf/config.properties
                 sudo sed -i '/#filesystem#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/conf/config.properties
                 sudo sed -i '/#parquet#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/conf/config.properties
@@ -218,6 +219,7 @@ runs:
                 "${GITHUB_WORKSPACE}/.github/scripts/dataSources/db_config_switcher_linux_windows.sh" ${{ inputs.DB-name }}
               elif [ "$RUNNER_OS" == "Windows" ]; then
                 sed -i '/storageEngineList=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/conf/config.properties
+                sed -i '/storageEngineList=/s/localhost/host.docker.internal/g' ${GITHUB_WORKSPACE}/conf/config.properties
                 sed -i '/zookeeperConnectionString=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/conf/config.properties
                 sed -i '/#filesystem#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/conf/config.properties
                 sed -i '/#parquet#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/conf/config.properties
@@ -225,6 +227,7 @@ runs:
                 "${GITHUB_WORKSPACE}/.github/scripts/dataSources/db_config_switcher_linux_windows.sh" ${{ inputs.DB-name }}
               elif [ "$RUNNER_OS" == "macOS" ]; then
                 sudo sed -i '' '/storageEngineList=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/conf/config.properties
+                sudo sed -i '' '/storageEngineList=/s/localhost/host.docker.internal/g' ${GITHUB_WORKSPACE}/conf/config.properties
                 sudo sed -i '' '/zookeeperConnectionString=/s/127.0.0.1/host.docker.internal/g' ${GITHUB_WORKSPACE}/conf/config.properties
                 sudo sed -i '' '/#filesystem#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/conf/config.properties
                 sudo sed -i '' '/#parquet#/s/host.docker.internal/127.0.0.1/g' ${GITHUB_WORKSPACE}/conf/config.properties
