--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -26,10 +26,10 @@ jobs:
                         "Parquet",
                         "PostgreSQL",
                         "FileSystem",
-                        "Redis",
+#                        "Redis",
                         "MongoDB",
                     ]
-                metadata: [zookeeper, etcd]
+                metadata: [zookeeper]
         runs-on: ${{ matrix.os }}
         steps:
             - uses: actions/checkout@v4
