--- a/.github/workflows/standalone-test-pushdown.yml
+++ b/.github/workflows/standalone-test-pushdown.yml
@@ -19,7 +19,16 @@ jobs:
                 java: [8]
                 python-version: ["3.9"]
                 os: [ubuntu-latest, macos-13, windows-latest]
-                DB-name: ["MySQL", "PostgreSQL"]
+                DB-name:
+                    "FileSystem",
+                      "IoTDB12",
+                      "InfluxDB",
+                      "PostgreSQL",
+                      "Redis",
+                      "MongoDB",
+                      "Parquet",
+                      "MySQL"
+                ]
                 metadata: [zookeeper]
         runs-on: ${{ matrix.os }}
         steps:
